--- a/WeatherApp.API/appsettings.json
+++ b/WeatherApp.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenWeatherMap": {
+    "ApiKey": "58c87243285af68c7f18b2dc13c9256e"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=WeatherDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
